# models/Order.js
@@ -1,0 +1,29 @@
+import { DataTypes } from "sequelize";
+import sequelize from "../config/db.js";
+
+const Order = sequelize.define(
+  "Order",
+  {
+    name: {
+      type: DataTypes.STRING,
+      allowNull: false,
+    },
+    phone: {
+      type: DataTypes.STRING,
+      allowNull: false,
+    },
+    address: {
+      type: DataTypes.STRING,
+      allowNull: false,
+    },
+    message: {
+      type: DataTypes.TEXT,
+      allowNull: true,
+    },
+  },
+  {
+    tableName: "orders",
+  },
+);
+
+export default Order;
